# study_yatube

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dump.json  pyproject.toml  requests.http  requirements.txt
api/: serializers.py  urls.py  views.py
posts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200523_1146.py  0003_auto_20200523_1148.py  0004_auto_20200529_2026.py  0005_auto_20200602_1518.py  0006_auto_20200602_1534.py  0007_auto_20200602_1557.py  0008_auto_20200602_1748.py  0009_auto_20200602_1849.py  0010_auto_20200603_1516.py  0011_auto_20200603_1608.py  0012_auto_20200603_1609.py  0013_auto_20200607_1557.py  0014_auto_20200610_1801.py  0015_post_image.py  0016_auto_20200730_1120.py  0017_follow.py  0018_auto_20200802_1406.py  0019_auto_20200808_1608.py
templates/: base.html  follow.html  group.html  index.html  new.html  post.html  profile.html
templates/include/: comments.html  nav.html  post_card.html  user_card.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
users/: forms.py  tests.py  views.py
users/templates/: signup.html
users/templates/registration/: logged_out.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
users/templatetags/: user_filters.py
yatube/: .env  context_processors.py  settings.py  urls.py
